# CoherentControlMatMul

./: .gitignore  Makefile  README.md  pyproject.toml  run.py  test_optimizer.py  verify_plant.py
demo/: __init__.py  control_loop.py  run_demo.py  svd_control_loop.py  visualizer.py
plant/: __init__.py  coherent_receiver.py  mzi_mesh.py  plant_wrapper.py  svd_plant.py  thermal_dynamics.py  voa.py
rtl/: Makefile  adc_scaler.sv  coherent_matmul_top.sv  pkg_types.sv
rtl/tests/: __init__.py  conftest.py  plant_adapter.py  plotting.py  test_cosim.py  test_debug_chain.py
tests/: __init__.py  conftest.py  test_calibration.py  test_compute.py  test_drift.py  test_edge_cases.py
tests/utils/: __init__.py  golden_model.py  plant_adapter.py  scoreboard.py  stimulus.py
