[project]
name = "coherent-matmul"
version = "0.1.0"
description = "Closed-loop coherent photonic matrix multiplication simulation"
requires-python = ">=3.10"
dependencies = [
    "cocotb>=1.9.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plant"]

[tool.pytest.ini_options]
testpaths = ["rtl/tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
